hdone/objects/DataFile__c.object
<CustomObject>
    <description>Used for data sent or loaded through a file. Indicates information from file.</description>
    <fields>
        <fullName>CustomerId__c</fullName>
        <description>External Id from Customer. Should be unique across objects for customer.</description>
        <externalId>true</externalId>
        <inlineHelpText>External or Customer Id</inlineHelpText>
        <label>CustomerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataFileIdFormula__c</fullName>
        <formula>CASESAFEID( Id) 

/* Checks to see if Primary record is shared from customer org or Master org 
Also looks at lookup records for same thing 
Uses Name Connection to determine if shared from other org*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataFileIdFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileDate__c</fullName>
        <description>Date of file</description>
        <inlineHelpText>Date of file</inlineHelpText>
        <label>FileDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FileLocale__c</fullName>
        <description>Location, if any, of data on file</description>
        <inlineHelpText>Location, if any, of data on file</inlineHelpText>
        <label>FileLocale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>File Name</description>
        <inlineHelpText>File Name</inlineHelpText>
        <label>FileName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileType__c</fullName>
        <description>Type of data on file</description>
        <inlineHelpText>Type of data on file</inlineHelpText>
        <label>FileType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Access and Availability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PNRCStatusCheck__c</fullName>
        <description>Last date and time the PartnerNetworkRecordConnection status was updated</description>
        <inlineHelpText>Last date and time the PartnerNetworkRecordConnection status was updated</inlineHelpText>
        <label>PNRCStatusCheck</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name</description>
        <inlineHelpText>Product Name</inlineHelpText>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Name</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordCount__c</fullName>
        <description>Count of records on file</description>
        <inlineHelpText>Count of records on file</inlineHelpText>
        <label>RecordCount</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RemoteDataFileId__c</fullName>
        <label>RemoteDataFileId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_PartnerConnection_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sf2Sf_PartnerConnection_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareId__c</fullName>
        <label>Sf2Sf ShareId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareName__c</fullName>
        <label>Sf2Sf_ShareName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sf2Sf_ShareStatus__c</fullName>
        <label>Sf2Sf_ShareStatus</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Identifies which is source org for record. If record is shared FROM customer to HealthDetail then Customer else if shared other way HealthDetail. Was using formula fields but getting relationship errors.</description>
        <inlineHelpText>Identifies which is source org for record Customer or HealthDetail</inlineHelpText>
        <label>SourceOrg</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>HealthDetail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DataFile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>DataFile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>